Added Heroku code in json and php files.

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 			<div id="scorebox">
 				<p><h3>Wins: <span id="wins"></span></h3></p>
-				<p><h3>Number of Guesses Remaining: <span id="guessTally"></span></h3></p>
+				<p><h3>Number of Guesses Remaining: <span id="remainingGuesses"></span></h3></p>
 				<p><h3>Letters Already Guessed: <span id="lettersGuessed"></span></h3></p>
 			</div>
 		</div>
