Updates, plus added images to assets folder.

--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
 				<p>Press any key to get started!</p>
 			</div>
 			
-			<div id="blanks">
+			<div id="blanksContainer">
 				<!-- Insert BLANK SPACES here. -->
-				<p><h3></h3></p>
+				<span id="blanks"><h2></h2></span>
 			</div>
 
 			<div id="scorebox">
