--- a/index.html
+++ b/index.html
@@ -10,10 +10,13 @@
 	
 	<body>
 
+		<header>
+			<h1>Hangman | Robert De Niro Edition</h1>
+		</header>
+
 		<div id="game">
-			<div id="title">
-				<h1>Hangman | Robert De Niro Edition</h1>
-			</div>
+			
+			<img src="assets/images/heat.jpg" class="banner">
 			
 			<div id="instructions">
 				<p>Press any key to get started!</p>
@@ -30,6 +33,10 @@
 				<p><h3>Letters Already Guessed: <span id="lettersGuessed"></span></h3></p>
 			</div>
 		</div>
+
+		<footer>
+			<h5>&copy Copyright 2016 Todd Croak-Falen</h5>
+		</footer>
 
 	</body>
 
